--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Malnutrition Tracker</title>
 </head>
-<body>
-    <header>
-        Hello!
-    </header>
+<body>  
+    <!-- MENU SECTION -->
+    <section class="menu">
+        <div class="logo">LOGO</div>
+        <nav>
+            <a href="">Home </a>
+            <span>  |  </span>
+            <a href=""> About  </a>
+            <span> | </span>
+            <a href=""> Contact</a>
+        </nav>
+        <button> Log In </button>
+    </section>
+
+    
 </body>
 </html>
