started building the header --  added image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Malnutrition Tracker</title>
 </head>
 <body>  
+    
     <!-- MENU SECTION -->
     <section class="menu">
         <div class="logo">LOGO</div>
@@ -21,6 +22,10 @@
         <button> Log In </button>
     </section>
 
-    
+    <header>
+        <div class="header-img">
+            <img src="img/header-img-desktop.png" alt="">
+        </div>
+    </header>
 </body>
 </html>
