--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     </section>
 
     <header>
-        <div class="header-img">
+        <div class="header-container">
             <img src="img/header-img-desktop.png" alt="">
+            <h1>This is a title</h1>
+            <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore, magna aliqua.</p>
+            <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
+        
     </header>
 </body>
 </html>
