--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span> | </span>
             <a href=""> Contact</a>
         </nav>
-        <button> Log In </button>
+        <button> <span>Log In</span> </button>
     </section>
 
     <header>
@@ -31,5 +31,36 @@
         </div>
         
     </header>
+
+    <section class="webgl">
+        <iframe src="https://playcanv.as/p/kU1mx35y/" frameborder="0"></iframe>
+    </section>
+
+    <section class="info">
+        <div class="info1">
+            <div class="info-img">
+                <img src="img/balloon-child.png" alt="">
+            </div>
+            <div class="info-text">
+                <h1>This is a title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+
+        <div class="info2">
+            <div class="info-text">
+                <h1>This is a title</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt.</p>
+            </div>
+
+            <div class="info-img">
+                <img src="img/hindi-child.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
+    </footer>
 </body>
 </html>
