--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
     </header>
 
-    <section class="webgl">
+    <section class="webgl" id="iframe">
         <iframe src="https://playcanv.as/p/kU1mx35y/" frameborder="0"></iframe>
     </section>
 
