first commit -  started building the About page

--- a/index.html
+++ b/index.html
@@ -15,27 +15,29 @@
         <nav>
             <a href="">Home </a>
             <span>  |  </span>
-            <a href=""> About  </a>
+            <a href="about.html"> About  </a>
             <span> | </span>
             <a href=""> Contact</a>
         </nav>
         <button> <span>Log In</span> </button>
     </section>
 
+    <!-- HEADER SECTION -->
     <header>
         <div class="header-container">
             <img src="img/header-img-desktop.png" alt="">
             <h1>This is a title</h1>
             <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore, magna aliqua.</p>
             <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        
+        </div> 
     </header>
 
+<!-- WEBGL SECTION -->
     <section class="webgl" id="iframe">
         <iframe src="https://playcanv.as/p/kU1mx35y/" frameborder="0"></iframe>
     </section>
 
+    <!-- INFORMATION SECTION -->
     <section class="info">
         <div class="info1">
             <div class="info-img">
@@ -59,6 +61,7 @@
         </div>
     </section>
 
+    <!-- FOOTER SECTION -->
     <footer>
         <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
     </footer>
