finished the about status with avatars and role titles

--- a/about.html
+++ b/about.html
@@ -28,6 +28,24 @@
             <img src="avatars/tl.svg" alt="">
             <p>Project Manager</p>
         </div>
+        <div class="rect-dev-wrapper">
+            <div class="react-devs">
+                <img src="avatars/react1.svg" alt="">
+                <p>React Developer</p>
+            </div>
+            <div class="react-devs">
+                <img src="avatars/react1.svg" alt="">
+                <p>React Developer</p>
+            </div>
+            <div class="react-devs">
+                <img src="avatars/react1.svg" alt="">
+                <p>Web Developer</p>
+            </div>
+        </div>
+        <div class="tl">
+            <img src="avatars/tl.svg" alt="">
+            <p>Back End Engineer</p>
+        </div>
     </section>
     
 </body>
