finished the about page

--- a/about.html
+++ b/about.html
@@ -24,11 +24,17 @@
 
     <!-- MEET THE TEAM SECTION -->
     <section class="team">
-        <div class="tl">
-            <img src="avatars/tl.svg" alt="">
-            <p>Project Manager</p>
+        <div class="first-row">
+            <div class="tl">
+                <img src="avatars/tl.svg" alt="">
+                <p>Project Manager</p>
+            </div>
+            <div class="backend">
+                <img src="avatars/tl.svg" alt="">
+                <p>Back End Engineer</p>
+            </div>
         </div>
-        <div class="rect-dev-wrapper">
+        <div class="react-dev-wrapper">
             <div class="react-devs">
                 <img src="avatars/react1.svg" alt="">
                 <p>React Developer</p>
@@ -42,11 +48,10 @@
                 <p>Web Developer</p>
             </div>
         </div>
-        <div class="tl">
-            <img src="avatars/tl.svg" alt="">
-            <p>Back End Engineer</p>
-        </div>
     </section>
     
+    <footer>
+        <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
+    </footer>
 </body>
 </html>
