changed webgl url - removed space effect and shaders

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- WEBGL SECTION -->
     <section class="webgl" id="iframe">
-        <iframe src="https://playcanv.as/p/kU1mx35y/" frameborder="0"></iframe>
+        <iframe src="https://playcanv.as/p/lgLp0qgZ/" frameborder="0"></iframe>
     </section>
 
     <!-- INFORMATION SECTION -->
