--- a/about.html
+++ b/about.html
@@ -9,49 +9,51 @@
 </head>
 <body>
 
-    <!-- MENU SECTION -->
-    <section class="menu">
-        <div class="logo">LOGO</div>
-        <nav>
-            <a href="index.html">Home </a>
-            <span>  |  </span>
-            <a href="about.html"> About  </a>
-            <span> | </span>
-            <a href=""> Contact</a>
-        </nav>
-        <button> <span>Log In</span> </button>
-    </section>
+    <div class="container">
+        <!-- MENU SECTION -->
+        <section class="menu">
+            <div class="logo">LOGO</div>
+            <nav>
+                <a href="index.html">Home </a>
+                <span>  |  </span>
+                <a href="about.html"> About  </a>
+                <span> | </span>
+                <a href=""> Contact</a>
+            </nav>
+            <button> <span>Log In</span> </button>
+        </section>
 
-    <!-- MEET THE TEAM SECTION -->
-    <section class="team">
-        <div class="first-row">
-            <div class="tl">
-                <img src="avatars/tl.svg" alt="">
-                <p>Project Manager</p>
+        <!-- MEET THE TEAM SECTION -->
+        <section class="team">
+            <div class="first-row">
+                <div class="tl">
+                    <img src="avatars/tl.svg" alt="">
+                    <p>Project Manager</p>
+                </div>
+                <div class="backend">
+                    <img src="avatars/tl.svg" alt="">
+                    <p>Back End Engineer</p>
+                </div>
             </div>
-            <div class="backend">
-                <img src="avatars/tl.svg" alt="">
-                <p>Back End Engineer</p>
+            <div class="react-dev-wrapper">
+                <div class="react-devs">
+                    <img src="avatars/react1.svg" alt="">
+                    <p>React Developer</p>
+                </div>
+                <div class="react-devs">
+                    <img src="avatars/react1.svg" alt="">
+                    <p>React Developer</p>
+                </div>
+                <div class="react-devs">
+                    <img src="avatars/react1.svg" alt="">
+                    <p>Web Developer</p>
+                </div>
             </div>
-        </div>
-        <div class="react-dev-wrapper">
-            <div class="react-devs">
-                <img src="avatars/react1.svg" alt="">
-                <p>React Developer</p>
-            </div>
-            <div class="react-devs">
-                <img src="avatars/react1.svg" alt="">
-                <p>React Developer</p>
-            </div>
-            <div class="react-devs">
-                <img src="avatars/react1.svg" alt="">
-                <p>Web Developer</p>
-            </div>
-        </div>
-    </section>
-    
-    <footer>
-        <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
-    </footer>
+        </section>
+        
+        <footer>
+            <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
+        </footer>
+    </div>
 </body>
 </html>
