--- a/index.html
+++ b/index.html
@@ -8,62 +8,66 @@
     <title>Malnutrition Tracker</title>
 </head>
 <body>  
+    <div class="container">
     
-    <!-- MENU SECTION -->
-    <section class="menu">
-        <div class="logo">LOGO</div>
-        <nav>
-            <a href="">Home </a>
-            <span>  |  </span>
-            <a href="about.html"> About  </a>
-            <span> | </span>
-            <a href=""> Contact</a>
-        </nav>
-        <button> <span>Log In</span> </button>
-    </section>
+        <!-- MENU SECTION -->
+        <section class="menu">
+            <div class="logo">LOGO</div>
+            <nav>
+                <a href="">Home </a>
+                <span>  |  </span>
+                <a href="about.html"> About  </a>
+                <span> | </span>
+                <a href=""> Contact</a>
+            </nav>
+            <button> <span>Log In</span> </button>
+        </section>
 
-    <!-- HEADER SECTION -->
-    <header>
-        <div class="header-container">
-            <img src="img/header-img-desktop.png" alt="">
-            <h1>This is a title</h1>
-            <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore, magna aliqua.</p>
-            <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div> 
-    </header>
-
-<!-- WEBGL SECTION -->
-    <section class="webgl" id="iframe">
-        <iframe src="https://playcanv.as/p/lgLp0qgZ/" frameborder="0"></iframe>
-    </section>
-
-    <!-- INFORMATION SECTION -->
-    <section class="info">
-        <div class="info1">
-            <div class="info-img">
-                <img src="img/balloon-child.png" alt="">
-            </div>
-            <div class="info-text">
+        <!-- HEADER SECTION -->
+        <header>
+            <div class="header-container">
+                <img src="img/header-img-desktop.png" alt="">
                 <h1>This is a title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-        </div>
+                <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore, magna aliqua.</p>
+                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div> 
+        </header>
 
-        <div class="info2">
-            <div class="info-text">
-                <h1>This is a title</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt.</p>
+    <!-- WEBGL SECTION -->
+        <section class="webgl" id="iframe">
+            <iframe src="https://playcanv.as/p/lgLp0qgZ/" frameborder="0"></iframe>
+        </section>
+
+        <!-- INFORMATION SECTION -->
+        <section class="info">
+            <div class="info1">
+                <div class="info-img">
+                    <img src="img/balloon-child.png" alt="">
+                </div>
+                <div class="info-text">
+                    <h1>This is a title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
             </div>
 
-            <div class="info-img">
-                <img src="img/hindi-child.png" alt="">
-            </div>
-        </div>
-    </section>
+            <div class="info2">
+                <div class="info-text">
+                    <h1>This is a title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt.</p>
+                </div>
 
-    <!-- FOOTER SECTION -->
-    <footer>
-        <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
-    </footer>
+                <div class="info-img">
+                    <img src="img/hindi-child.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- FOOTER SECTION -->
+        <footer>
+            <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
+        </footer>
+    </div>
+
+    
 </body>
 </html>
