connecter landing page with react app

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span> | </span>
                 <a href=""> Contact</a>
             </nav>
-            <button> <span>Log In</span> </button>
+            <button onclick="location.href = 'https://cocky-lalande-719272.netlify.com/';"> <span>Log In</span> </button>
         </section>
 
         <!-- HEADER SECTION -->
