--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
         <!-- MENU SECTION -->
         <section class="menu">
-            <div class="logo">LOGO</div>
+            <div class="logo">MALO tracker</div>
             <nav>
                 <a href="">Home </a>
                 <span>  |  </span>
@@ -27,9 +27,9 @@
         <header>
             <div class="header-container">
                 <img src="img/header-img-desktop.png" alt="">
-                <h1>This is a title</h1>
-                <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore, magna aliqua.</p>
-                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h1>An excellent children Malnutrition Tracker</h1>
+                <p class="p1">We’re partnering with NGOs as they fight child malnutrition internationally.</p>
+                <p class="p2">Be part of this community and help the children of our future!</p>
             </div> 
         </header>
 
@@ -45,15 +45,17 @@
                     <img src="img/balloon-child.png" alt="">
                 </div>
                 <div class="info-text">
-                    <h1>This is a title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h1>What causes malnutrition?</h1>
+                    <p>The main causes are unsafe water, inadequate sanitation or insufficient hygiene, factors related to society and poverty, diseases, maternal factors, gender issues and – overall – poverty.</p>
+                    <p>Undernutrition in children causes direct structural damage to the brain and impairs infant motor development and exploratory behavior.[9] Children who are undernourished before age two and gain weight quickly later in childhood and in adolescence are at high risk of chronic diseases related to nutrition.</p>
                 </div>
             </div>
 
             <div class="info2">
                 <div class="info-text">
-                    <h1>This is a title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequavt.</p>
+                    <h1>How can you protect them?</h1>
+                    <p>Be using the Malo Tracker you'll be helping organizations around the world having a clearer view and orginize the best strategies to fight against the phenomenon of children malnutrition.</p>
+                    <p>Be one of them!</p>
                 </div>
 
                 <div class="info-img">
