fixed minor issues and replaces webgl link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- WEBGL SECTION -->
         <section class="webgl" id="iframe">
+            <p>The 25 countries with the higher percentage of malnutrition:</p>
             <iframe src="https://playcanv.as/p/lgLp0qgZ/" frameborder="0"></iframe>
         </section>
 
@@ -53,8 +54,8 @@
 
             <div class="info2">
                 <div class="info-text">
-                    <h1>How can you protect them?</h1>
-                    <p>Be using the Malo Tracker you'll be helping organizations around the world having a clearer view and orginize the best strategies to fight against the phenomenon of children malnutrition.</p>
+                    <h1>How can you help?</h1>
+                    <p>By using Malo Tracker you'll be helping organizations around the world with your data, having a clearer view and organize the best strategies to fight against children malnutrition.</p>
                     <p>Be one of them!</p>
                 </div>
 
