small changes + added a style guide

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- MENU SECTION -->
         <section class="menu">
-            <div class="logo">LOGO</div>
+            <div class="logo">malo tracker</div>
             <nav>
                 <a href="index.html">Home </a>
                 <span>  |  </span>
