--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
         <!-- MENU SECTION -->
         <section class="menu">
-            <div class="logo">MALO tracker</div>
+            <div class="logo">malo tracker</div>
             <nav>
                 <a href="">Home </a>
                 <span>  |  </span>
