--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span>  |  </span>
                 <a href="about.html"> About  </a>
                 <span> | </span>
-                <a href=""> Contact</a>
+                <a href="#contact"> Contact</a>
             </nav>
             <button  onclick="location.href='https://suspicious-babbage-c91c67.netlify.com/'"> <span>Log In</span> </button> 
         </section>
@@ -67,7 +67,7 @@
 
         <!-- FOOTER SECTION -->
         <footer>
-            <div class="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
+            <div id="contact">Call: 202-555-0107  |  Email: malnutrition@children.com</div>
         </footer>
     </div>
 
